[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/3D Geist/Geist 3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/3D Geist/Geist Zone/Geist Zone.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=2]
radius = 75.0
height = 150.0

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.945098, 0.156863, 0.156863, 0.0588235 )
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.5
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="SphereShape" id=1]
radius = 75.0

[node name="Geist Zone" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Geist 3D" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="contact" from="Geist 3D" to="." method="_on_Geist_3D_contact"]
